--- a/templates/activity_picker.html
+++ b/templates/activity_picker.html
@@ -111,11 +111,12 @@
 				</div>
 				{% endif %}
 			{% endfor %}
-		</section>
+		</section >
 
-
-		<p class="submitp"><input class="button" value='Make Choice' type='SUBMIT'></p>
+	<section class="submit-section">
+		<p class="submitp"><input class="button" value='Choose an Activity' type='SUBMIT'></p>
 	</section>
+</section>
 </form>
 
 
