--- a/templates/collect_info.html
+++ b/templates/collect_info.html
@@ -37,9 +37,9 @@
 				<p>You may upload another photo after this one is uploaded</p>
 			</div>
 		</section>
-
-
-		<p class="submitp"><input class="button" value='Make Choice' type='SUBMIT'></p>
+		<section class="submit-section">
+			<p class="submitp"><input class="button" value='Upload' type='SUBMIT'></p>
+		</section>
 	</section>
 </form>
 
