--- a/templates/completed.html
+++ b/templates/completed.html
@@ -11,16 +11,13 @@
 
 <form method='POST' action='/apply_activity'>
 	<section class="form-header">
-		<!-- {% if message is defined %}
-    <p>{{ message }}</p>
-    {% endif %}
-    <p>Please select the Major Power you would like to add to your character:</p> -->
+
 		<h2>Completed Activities</h2>
 		<p>You may add photos to completed activities by selecting them and adding the photos on the next page.</p>
 	</section>
 	<section class="form-body">
 		<section class="picker-category get-moving-section">
-			<h3>Get Moving<span> - {{ data['score']['categories']['Get Moving']['completed'] }}&#47;3</span></h3>
+			<h3><i class="fa fa-bicycle" aria-hidden="true"></i> Get Moving<span> - {{ data['score']['categories']['Get Moving']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Get Moving' and data[activity]['is_complete'] == True %}
 				<div class="picker">
@@ -40,7 +37,7 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category investigate-section">
-			<h3>Investigate<span> - {{ data['score']['categories']['Investigate']['completed'] }}&#47;2</span></h3>
+			<h3><i class="fa fa-binoculars" aria-hidden="true"></i> Investigate<span> - {{ data['score']['categories']['Investigate']['completed'] }}&#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Investigate' and data[activity]['is_complete'] == True %}
 				<div class="picker">
@@ -60,7 +57,7 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category serve-section">
-			<h3>Serve<span> - {{ data['score']['categories']['Serve']['completed'] }}&#47;2</span></h3>
+			<h3><i class="fa fa-star-o" aria-hidden="true"></i> Serve<span> - {{ data['score']['categories']['Serve']['completed'] }}&#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Serve' and data[activity]['is_complete'] == True %}
 				<div class="picker">
@@ -80,7 +77,7 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category outdoor-skills-section">
-			<h3>Outdoor Skills<span> - {{ data['score']['categories']['Outdoor Skills']['completed'] }}&#47;3</span></h3>
+			<h3><i class="fa fa-fire" aria-hidden="true"></i> Outdoor Skills<span> - {{ data['score']['categories']['Outdoor Skills']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Outdoor Skills' and data[activity]['is_complete'] == True %}
 				<div class="picker">
@@ -100,7 +97,7 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category create-section">
-			<h3>Create<span> - {{ data['score']['categories']['Create']['completed'] }}&#47;2</span></h3>
+			<h3><i class="fa fa-lightbulb-o" aria-hidden="true"></i> Create<span> - {{ data['score']['categories']['Create']['completed'] }}&#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Create' and data[activity]['is_complete'] == True %}
 				<div class="picker">
@@ -120,7 +117,7 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category just-for-fun-section">
-			<h3>Just For Fun<span> - {{ data['score']['categories']['Just For Fun']['completed'] }}&#47;3</span></h3>
+			<h3><i class="fa fa-camera" aria-hidden="true"></i> Just For Fun<span> - {{ data['score']['categories']['Just For Fun']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Just For Fun' and data[activity]['is_complete'] == True %}
 				<div class="picker">
@@ -140,7 +137,7 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category know-your-parks-section">
-			<h3>Know Your Parks<span> - {{ data['score']['categories']['Know Your Parks']['completed'] }}&#47;3</span></h3>
+			<h3><i class="fa fa-map-marker" aria-hidden="true"></i> Know Your Parks<span> - {{ data['score']['categories']['Know Your Parks']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Know Your Parks' and data[activity]['is_complete'] == True %}
 				<div class="picker">
@@ -160,8 +157,9 @@
 			{% endfor %}
 		</section>
 
-
-		<p class="submitp"><input class="button" value='Make Choice' type='SUBMIT'></p>
+		<section class="submit-section">
+			<p class="submitp"><input class="button" value='Add Photos' type='SUBMIT'></p>
+		</section>
 	</section>
 </form>
 
