--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -34,8 +34,9 @@
 
 
 		</section>
-
-		<p class="submitp"><input class="button" value='Make Choice' type='SUBMIT'></p>
+		<section class="submit-section">
+			<p class="submitp"><input class="button" value='Submit' type='SUBMIT'></p>
+		</section>
 	</section>
 </form>
 
