--- a/templates/priority_list.html
+++ b/templates/priority_list.html
@@ -14,16 +14,17 @@
     <p>{{ message }}</p>
     {% endif %}
     <p>Please select the Major Power you would like to add to your character:</p> -->
-		<h2>Priority List</h2>
+		<h2>Priority List: {{ priority_points }} Points</h2>
 
+		<p>Create a short-list of things you plan to do.  You may also <a href='/priority_picker'>Add or Remove Activities</a>.</p>
 	</section>
 	<section class="form-body">
 		<section class="picker-category get-moving-section">
-			<h3>Get Moving<span> - {{ data['score']['categories']['Get Moving']['completed'] }}&#47;3</span></h3>
+			<h3><i class="fa fa-bicycle" aria-hidden="true"></i> Get Moving<span> - {{ data['score']['categories']['Get Moving']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Get Moving' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity'] }}
+					<label class="container">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
@@ -32,11 +33,11 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category investigate-section">
-			<h3>Investigate<span> - {{ data['score']['categories']['Investigate']['completed'] }}&#47;2</span></h3>
+			<h3><i class="fa fa-binoculars" aria-hidden="true"></i> Investigate<span> - {{ data['score']['categories']['Investigate']['completed'] }}&#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Investigate' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity']}}
+					<label class="container">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
@@ -45,11 +46,11 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category serve-section">
-			<h3>Serve<span> - {{ data['score']['categories']['Serve']['completed'] }}&#47;2</span></h3>
+			<h3><i class="fa fa-star-o" aria-hidden="true"></i> Serve<span> - {{ data['score']['categories']['Serve']['completed'] }}&#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Serve' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity']}}
+					<label class="container">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
@@ -58,11 +59,11 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category outdoor-skills-section">
-			<h3>Outdoor Skills<span> - {{ data['score']['categories']['Outdoor Skills']['completed'] }}&#47;3</span></h3>
+			<h3><i class="fa fa-fire" aria-hidden="true"></i> Outdoor Skills<span> - {{ data['score']['categories']['Outdoor Skills']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Outdoor Skills' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity']}}
+					<label class="container">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
@@ -71,11 +72,11 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category create-section">
-			<h3>Create<span> - {{ data['score']['categories']['Create']['completed'] }}&#47;2</span></h3>
+			<h3><i class="fa fa-lightbulb-o" aria-hidden="true"></i> Create<span> - {{ data['score']['categories']['Create']['completed'] }}&#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Create' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity']}}
+					<label class="container">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
@@ -84,11 +85,11 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category just-for-fun-section">
-			<h3>Just For Fun<span> - {{ data['score']['categories']['Just For Fun']['completed'] }}&#47;3</span></h3>
+			<h3><i class="fa fa-camera" aria-hidden="true"></i> Just For Fun<span> - {{ data['score']['categories']['Just For Fun']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Just For Fun' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity']}}
+					<label class="container">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
@@ -97,11 +98,11 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category know-your-parks-section">
-			<h3>Know Your Parks<span> - {{ data['score']['categories']['Know Your Parks']['completed'] }}&#47;3</span></h3>
+			<h3><i class="fa fa-map-marker" aria-hidden="true"></i> Know Your Parks<span> - {{ data['score']['categories']['Know Your Parks']['completed'] }}&#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Know Your Parks' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
 				<div class="picker">
-					<label class="container">{{ data[activity]['Activity']}}
+					<label class="container">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}" required>
 			        <span class="checkmark"></span>
 			      </label>
@@ -109,13 +110,13 @@
 				{% endif %}
 			{% endfor %}
 		</section>
+		<section class="submit-section">
+			<p class="submitp"><input class="button" value='Choose an Activity' type='SUBMIT'> <a href='/priority_picker' class="button">Add or Remove Activities</a></p>
 
-
-		<p class="submitp"><input class="button" value='Make Choice' type='SUBMIT'></p>
+		</section>
 	</section>
 </form>
 
-<p><a href='/priority_picker'>Add an activity</a></p>
 
 {% endblock %} {% block script %}
 <script type="text/javascript">
