--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
 			<li><a href="/">Activity List</a></li>
 			<li><a href="/completed">Completed</a></li>
 			<li><a href="/priority_list">Priority List</a></li>
+			<li><a href="/add_bonus">Add Bonus Activity</a></li>
 			<li><a href="/logout">Logout</a></li>
 		</ul>
 		</section>
