created download photos button

--- a/templates/activity_picker.html
+++ b/templates/activity_picker.html
@@ -112,7 +112,7 @@
 				{% endif %}
 			{% endfor %}
 		</section >
-		<section class="picker-category bonus_activities">
+		<section class="picker-category bonus_activities-section">
 			<h3><i class="fa fa-plus-circle" aria-hidden="true"></i>
  Bonuse Activities</h3>
 			{% for activity in data %}
