--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
 			<li><a href="/completed">Completed</a></li>
 			<li><a href="/priority_list">Priority List</a></li>
 			<li><a href="/add_bonus">Add Bonus Activity</a></li>
+			<li><a href="/more_options">More Options</a></li>
 			<li><a href="/logout">Logout</a></li>
 		</ul>
 		</section>
